<resources>
    <string name="app_name">MyPlanet</string>
    <string name="get_started">GET STARTED</string>
    <string name="click_the_below_button_for_continue">Click the below button for continue</string>
    <string name="are_you_ready_for_exploration">Are you ready for exploration?</string>
    <string name="my_planet_app">My Planet</string>
    <string name="image">image</string>
    <string name="gridview">GridView</string>
    <string name="hello_welcome_back">Hello, Welcome Back</string>
    <string name="listview">ListView</string>
    <string name="gridHorizontal">GridHorizontal</string>
    <string name="gridVertical">gridVertical</string>
    <string name="my_nplanet">My\nPlanet</string>
    <string name="star">Star</string>
    <string name="rocket">rocket</string>
    <string name="astronaut">Astronaut</string>
    <string name="planet">Planet</string>
    <string name="apollo_project">Apollo Project</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="imagebutton">imageButton</string>
    <string name="moon">Moon</string>
    <string name="sun">Sun</string>
    <string name="satelit">Satellite</string>
    <string name="exit">Exit</string>
    <string-array name="Data_Name_Planet">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="Data_Desc_Moon">The moon is Earth\'s natural satellite, a rocky body that orbits around our planet in a nearly circular path. It is approximately one-sixth the size of Earth, with a diameter of about 3,474 kilometers (2,159 miles), and has a gravitational force only about one-sixth as strong as Earth\'s gravity. The moon\'s surface is covered in craters, mountains, and valleys, created by the impact of asteroids, comets, and other celestial bodies over billions of years. The moon lacks an atmosphere, so it has no weather, air, or water. Its surface temperatures can vary drastically, from extremely hot during the lunar day to frigidly cold during the lunar night.\n
        \nThe moon has played a significant role in human history and culture. It has been a source of inspiration for art, literature, and mythology, and has been studied extensively by scientists and astronomers. Human beings have landed on the moon, and it has served as a platform for space exploration and scientific research. The moon\'s gravitational pull affects Earth\'s tides, and it has also been studied for its potential as a site for future human colonization or resource extraction. However, many mysteries about the moon remain, and it continues to fascinate scientists and space enthusiasts alike.
    </string>
    <string name="Data_Desc_Sun">The sun is a massive, hot ball of gas that is the center of our solar system. It has a diameter of about 1.4 million kilometers (870,000 miles) and is approximately 109 times larger than Earth. The sun\'s core is incredibly hot, with temperatures reaching up to 15 million degrees Celsius (27 million degrees Fahrenheit), and it is the source of light and heat that sustains life on Earth.\n
        \nThe sun\'s energy is produced through a process called nuclear fusion, where hydrogen atoms fuse together to form helium, releasing an enormous amount of energy in the process. This energy is emitted as sunlight, which takes about 8 minutes and 20 seconds to reach Earth, traveling at the speed of light.\n
        \nThe sun is also responsible for Earth\'s weather and climate, as its energy drives atmospheric processes such as wind, water cycle, and temperature patterns. It has sunspots, which are cooler and darker areas on its surface caused by magnetic activity, and solar flares, which are powerful eruptions of energy that can have an impact on Earth\'s technology and communication systems.\n
        \nThe sun has been a subject of fascination and worship in many cultures throughout history, and it plays a vital role in numerous mythologies and religions. It is also a subject of scientific study, with ongoing research to understand its properties, behavior, and role in the universe. While the sun is essential for life on Earth, it is important to remember that direct exposure to its intense heat and radiation can be harmful, and precautions should be taken when observing or studying it.
    </string>
</resources>