<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F99417"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".PlanetListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/hello_welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/gridHorizontal"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/grid_3x2_gap"
            android:contentDescription="@string/gridHorizontal" />

        <ImageButton
            android:id="@+id/gridVertical"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/grid"
            android:contentDescription="@string/gridVertical" />

        <ImageButton
            android:id="@+id/listView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/list"
            android:contentDescription="@string/listview" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@+id/circle_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/gridhorizontalitem">
    </androidx.recyclerview.widget.RecyclerView>

    <me.relex.circleindicator.CircleIndicator2
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:ci_animator="@animator/scale_with_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>