<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PlanetRecyclerView">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/moon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/image"
        android:src="@drawable/moon"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/astronaut"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moon"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/astronot" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="325dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/image"
        android:src="@drawable/planet"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/astronaut" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_nplanet"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:src="@drawable/shapeview"
        app:layout_constraintBottom_toTopOf="@+id/circle_indicator"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/planetRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/hello_welcome_back"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/gridHorizontal"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/gridHorizontal"
            android:src="@drawable/grid_3x2_gap" />

        <ImageButton
            android:id="@+id/gridVertical"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/gridVertical"
            android:src="@drawable/grid" />

        <ImageButton
            android:id="@+id/listView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/listview"
            android:src="@drawable/list" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/circle_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/gridplanethorizontalitem" />

    <me.relex.circleindicator.CircleIndicator2
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#F99417"
        app:ci_animator="@animator/scale_with_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>