<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SunDescription">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/starDescSunImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/star"
            android:scaleType="fitXY"
            android:src="@drawable/star" />


        <ImageView
            android:id="@+id/rocketSun"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/starDescSunImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/rocket"
            android:src="@drawable/rocket2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/descImageSun"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="1dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sun"
            android:scaleType="centerInside"
            android:src="@drawable/sun" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/starDescSunImage"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starDescSunImage">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sunText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sun"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="317dp" />

                <TextView
                    android:id="@+id/sunDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunText"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Data_Desc_Sun"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="383dp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>